--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Donny Dianderas</title>
-    <meta name ="description" content="Developed for the course WDD 131 - Dynamic Web Fundamentals, conducted by Donny Dianderas Hernández. It's about me and my place of origin.">
+    <meta name ="description" content="Course WDD 131 - Dynamic Web Fundamentals by Donny Dianderas. Learn about Donny and his journey into programming.">
     <meta name="author" content="Donny Dianderas">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/getdates.js" defer></script>
 </head>
