update meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Donny Dianderas</title>
-    <meta name ="description" content="Course WDD 131 - Dynamic Web Fundamentals by Donny Dianderas. Learn about Donny and his journey into programming.">
+    <meta name ="description" content="Course WDD 131 - Dynamic Web Fundamentals course at BYU-Idaho. 
+    I'm Donny, a dedicated Industrial Engineer with over 15 years of experience, is embarking on a new journey into programming. 
+    Learn about his background, motivations, and how he balances family life with a passion for technology. Explore his insights into web development, his experiences in the field, and his commitment to learning and growing in the ever-evolving tech industry. 
+    Follow his progress through this course and discover the exciting world of dynamic web development.">
+
     <meta name="author" content="Donny Dianderas">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
