--- a/week02/bom.html
+++ b/week02/bom.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="">
-    
+    <link rel="stylesheet" href="styles/bom.css">
+    <script src="scripts/bom.js"defer></script>
+
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
@@ -20,6 +21,7 @@
 	<button type="submit">Add Chapter</button>
 	<ul id="list"></ul>
 </main>
+<!--<script src="scripts/bom.js"></script>-->
     
 </body>
 </html>
