Logo update: Project Website

--- a/project/contactUs.html
+++ b/project/contactUs.html
@@ -17,15 +17,15 @@
     <header>
         <div class="logo">
             <div class="columnprax"><span class="colum">column</span><span class="prax">prax</span></div>
-            <div class="slogan">prácticos en su columna</div>
+            <div class="slogan">Practical for Your Spine</div>
         </div>
         <button type="button" id="menu"></button>
         <nav>
             <ul class="navigation">
-                <a href="siteplan.html" class="menu-link">Home</a>
-                <a href="about.html" class="menu-link">About Us</a>
-                <a href="treatments.html" class="menu-link">Treatments</a>
-                <a href="contactUs.html" class="menu-link">Contact Us</a>
+                <li><a href="siteplan.html" class="menu-link">Home</a></li>
+                <li><a href="about.html" class="menu-link">About Us</a></li>
+                <li><a href="treatments.html" class="menu-link">Treatments</a></li>
+                <li><a href="contactUs.html" class="menu-link">Contact Us</a></li>
             </ul>
         </nav>
 
