--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -17,25 +17,26 @@
     <header>
         <div class="logo">
             <div class="columnprax"><span class="colum">column</span><span class="prax">prax</span></div>
-            <div class="slogan">prácticos en su columna</div>
+            <div class="slogan">Practical for Your Spine</div>
         </div>
         <button type="button" id="menu"></button>
         <nav>
             <ul class="navigation">
-                <a href="siteplan.html" class="menu-link">Home</a>
-                <a href="about.html" class="menu-link">About Us</a>
-                <a href="treatments.html" class="menu-link">Treatments</a>
-                <a href="contactUs.html" class="menu-link">Contact Us</a>
+                <li><a href="siteplan.html" class="menu-link">Home</a></li>
+                <li><a href="about.html" class="menu-link">About Us</a></li>
+                <li><a href="treatments.html" class="menu-link">Treatments</a></li>
+                <li><a href="contactUs.html" class="menu-link">Contact Us</a></li>
             </ul>
+            
         </nav>
 
     </header>
     <main>
         <div class="hero">
             <picture>
-                <source media="(max-width: 799px)" srcset="images/treatment11.webp" />
-                <source media="(min-width: 800px)" srcset="images/treatment1.webp" />
-                <img src="images/treatment1.webp" alt="This is a Therapy" />
+                <source media="(max-width: 799px)" srcset="images/treatment11.webp" >
+                <source media="(min-width: 800px)" srcset="images/treatment1.webp" >
+                <img src="images/treatment1.webp" alt="This is a Therapy" >
             </picture>
             <div class="hero-message" id="heroMessage">At Columnprax, we care about your well-being.</div>
         </div>
