--- a/project/treatments.html
+++ b/project/treatments.html
@@ -11,32 +11,31 @@
     <link rel="stylesheet" href="styles/siteplan.css">
     <script src="scripts/siteplan.js" defer></script>
     <title>Treatments | Columnprax</title>
-    
 </head>
 <body>
     <header>
         <div class="logo">
             <div class="columnprax"><span class="colum">column</span><span class="prax">prax</span></div>
-            <div class="slogan">prácticos en su columna</div>
+            <div class="slogan">Practical for Your Spine</div>
         </div>
         <button type="button" id="menu"></button>
         <nav>
             <ul class="navigation">
-                <a href="siteplan.html" class="menu-link">Home</a>
-                <a href="about.html" class="menu-link">About Us</a>
-                <a href="treatments.html" class="menu-link">Treatments</a>
-                <a href="contactUs.html" class="menu-link">Contact Us</a>
+                <li><a href="siteplan.html" class="menu-link">Home</a></li>
+                <li><a href="about.html" class="menu-link">About Us</a></li>
+                <li><a href="treatments.html" class="menu-link">Treatments</a></li>
+                <li><a href="contactUs.html" class="menu-link">Contact Us</a></li>
             </ul>
         </nav>
-
     </header>
+
     <main>
-        <section class="hero">
+        <div class="hero">
             <picture>
                 <img src="images/treatment3.webp" alt="Treatment Hero Image">
             </picture>
             <div class="hero-message">Discover the Best Treatments for Your Spine</div>
-        </section>
+        </div>
 
         <section class="container">
             <h1>Our Treatments</h1>
@@ -56,6 +55,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div class="paragraph">
             <p>&copy; <span id="currentyear"></span> Donny Dianderas Hernández, Perú</p>
