--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -67,7 +67,7 @@
         </div>      
         <nav class="sociallinks">
           <a href="https://www.facebook.com/columpraxs.columpraxs">
-            <img src="images/facebook.svg" alt="Facebook">
+            <img src="images/facebook.svg" alt="Facebook" width="40" height="40">
           </a>
         </nav>
     </footer>
