css update and title upadte in my form.html

--- a/form.html
+++ b/form.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This page is designed to implement the form submission process, as well as use localStorage to keep track of the number of reviews completed by the user/client by adding a counter to the form submission on the review.html page.">
     <meta name="author" content="Donny Dianderas">
-    <title>Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <title>Product Review</title>
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer></script>
 </head>
@@ -37,6 +40,7 @@
                 <label><input type="checkbox" name="features" value="durability"> Durability</label>
                 <label><input type="checkbox" name="features" value="efficiency"> Efficiency</label>
                 <label><input type="checkbox" name="features" value="design"> Design</label>
+                <label><input type="checkbox" name="features" value="performance"> Performance</label>
             </fieldset>
             
             <label for="review">Written Review:</label>
