--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -29,7 +29,7 @@
             </ul>
             
         </nav>
-
+        
     </header>
     <main>
         <div class="hero">
@@ -64,6 +64,7 @@
         <div class="paragraph">
             <p>&copy; <span id="currentyear"></span> Donny Dianderas Hernández, Perú</p>
             <p id="lastModified"></p>
+            <p>Visits: <span id="visitCounter">0</span></p>
         </div>      
         <nav class="sociallinks">
           <a href="https://www.facebook.com/columpraxs.columpraxs">
