--- a/project/treatments.html
+++ b/project/treatments.html
@@ -42,14 +42,17 @@
             <div class="section">
                 <div class="box">
                     <h2>Chiropractic Adjustments</h2>
+                    <img src="images/pagetreatment1.webp" alt="adjustments Image" loading="lazy" width="150" height="100">
                     <p>Improve spinal alignment and reduce pain through expert adjustments.</p>
                 </div>
                 <div class="box">
                     <h2>Physical Therapy</h2>
+                    <img src="images/pagetreatment2.webp" alt="exercises Image" loading="lazy" width="150" height="100">
                     <p>Customized exercises to strengthen your back and prevent injuries.</p>
                 </div>
                 <div class="box">
                     <h2>Massage Therapy</h2>
+                    <img src="images/pagetreatment3.webp" alt="massage Image" loading="lazy" width="150" height="100">
                     <p>Relieve muscle tension and enhance relaxation with professional massage therapy.</p>
                 </div>
             </div>
